--- a/res/layout/activity_customer_product_detail_view.xml
+++ b/res/layout/activity_customer_product_detail_view.xml
@@ -32,6 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textColor="#000000"
+            android:gravity="center"
             android:background="@drawable/white_text_box_small"
             android:textSize="14sp"
             />
@@ -56,6 +57,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textColor="#000000"
+            android:gravity="center"
             android:background="@drawable/white_text_box_small"
             android:textSize="14sp"
              />
