--- a/res/layout/activity_compare_price.xml
+++ b/res/layout/activity_compare_price.xml
@@ -57,7 +57,12 @@
 	        android:textColor="#000000"
             android:background="@drawable/white_text_box_small"
 	        android:textSize="14sp"
-	        android:inputType="text" />
+	        android:inputType="text"
+	        android:singleLine="true" 
+	        android:clickable="false" 
+		    android:cursorVisible="false" 
+		    android:focusable="false" 
+		    android:focusableInTouchMode="false" />
 	        
     </LinearLayout>
     
@@ -122,7 +127,12 @@
 	        android:textColor="#000000"
 	        android:inputType="text"
             android:background="@drawable/white_text_box_small"
-	        android:textSize="14sp" />
+	        android:textSize="14sp"
+	        android:singleLine="true" 
+	        android:clickable="false" 
+		    android:cursorVisible="false" 
+		    android:focusable="false" 
+		    android:focusableInTouchMode="false" />
 	        
     </LinearLayout>
     
