--- a/res/layout/activity_charge_customer_detail.xml
+++ b/res/layout/activity_charge_customer_detail.xml
@@ -125,12 +125,24 @@
              android:layout_width="0dip"
              android:layout_height="wrap_content"
              android:layout_marginLeft="5dip"
-             android:layout_weight="0.45"
+             android:layout_weight="0.3"
              android:background="@drawable/white_text_box_small"
              android:ems="10"
              android:inputType="number"
              android:textColor="#000000"
              android:textSize="14sp" />
+         
+         <Button
+	    	android:id="@+id/buttonPriceSearch"
+	        style="?android:attr/buttonStyleSmall"
+	        android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.3"
+            android:layout_marginLeft="5dp"
+            android:gravity="center"
+            android:scaleY="0.6"
+	        android:background="@drawable/basic_inquiry_btn"
+	        android:onClick="OnClickSearch"/>
          
     </LinearLayout>
     
