--- a/res/layout/activity_purchase_regist.xml
+++ b/res/layout/activity_purchase_regist.xml
@@ -37,8 +37,6 @@
              android:text="2013-05-19"
              android:onClick="onClickSetDate1" />
         
-         <requestFocus />
-
          <CheckBox
             android:id="@+id/checkBoxImmediatePayment"
             android:layout_width="0dip"
@@ -105,7 +103,6 @@
 		    android:lines="1"
             android:background="@drawable/white_text_box_small"
             android:textSize="14sp"
-            android:inputType="number"
             android:ems="10" />
     
     </LinearLayout>
@@ -136,9 +133,12 @@
              android:ems="10"
              android:textSize="14sp"
              android:textColor="#000000"
-		    android:singleLine="true"
-		    android:lines="1"
+             android:inputType="number"
+		     android:singleLine="true"
+		     android:lines="1"
              android:background="@drawable/white_text_box_small" />
+        
+         <requestFocus />
         
          <Button
 	        android:id="@+id/buttonBarcode"
@@ -205,6 +205,7 @@
             android:textSize="14sp"
             android:textColor="#000000"
 		    android:singleLine="true"
+             android:inputType="number"
 		    android:lines="1"
             android:background="@drawable/white_text_box_small" />
        
@@ -215,7 +216,7 @@
             android:textColor="#ffffff"
             android:layout_marginLeft="10dp"
             android:layout_weight="0.6"
-            android:text="판매단가"
+            android:text="판매가"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textSize="14sp" />
 
@@ -227,6 +228,7 @@
 	        android:ems="10"
 	        android:textColor="#000000"
 		    android:singleLine="true"
+            android:inputType="number"
 		    android:lines="1"
             android:background="@drawable/white_text_box_small"
 	        android:textSize="14sp"
@@ -300,6 +302,15 @@
         android:orientation="horizontal"
         android:gravity="center" >
         
+        <CheckBox
+            android:id="@+id/checkBoxRejectedProduct"
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="반품"
+            android:textSize="14sp"
+        />
+        
 	    <Button
 	        android:id="@+id/buttonSave"
 	        style="?android:attr/buttonStyleSmall"
@@ -317,7 +328,7 @@
 	        android:layout_marginLeft="10dip"
 	        android:scaleY="0.8"
 	        android:background="@drawable/replace_btn" />
-	    
+       	    
 	</LinearLayout>
 	
 	<LinearLayout
