--- a/res/layout/activity_manage_stock.xml
+++ b/res/layout/activity_manage_stock.xml
@@ -131,6 +131,10 @@
             android:background="@drawable/white_text_box_small"
             android:inputType="number"
             android:ems="10"
+	        android:clickable="false" 
+		    android:cursorVisible="false" 
+		    android:focusable="false" 
+		    android:focusableInTouchMode="false"
             android:textSize="14sp"  />
         
         <TextView
@@ -154,6 +158,10 @@
             android:inputType="number"
             android:ems="10"
             android:textSize="14sp"  
+	        android:clickable="false" 
+		    android:cursorVisible="false" 
+		    android:focusable="false" 
+		    android:focusableInTouchMode="false"
 	     />       
     
     </LinearLayout>
@@ -206,6 +214,10 @@
             android:textColor="#000000"
             android:background="@drawable/white_text_box_small"
             android:inputType="number"
+	        android:clickable="false" 
+		    android:cursorVisible="false" 
+		    android:focusable="false" 
+		    android:focusableInTouchMode="false"
             android:ems="10"
             android:textSize="14sp" />
     
@@ -227,7 +239,7 @@
 	        android:layout_height="wrap_content"
 	        android:scaleY="0.75"
 	        android:background="@drawable/register_btn" />
-       
+       <!-- 
        <Button
 	        android:id="@+id/buttonModify"
 	        style="?android:attr/buttonStyleSmall"
@@ -237,7 +249,7 @@
 	        android:scaleY="0.75"
 	        android:background="@drawable/change_btn"
 	        android:onClick="onClickModify" />
-       
+       -->
        <Button
 	        android:id="@+id/buttonRenew"
 	        style="?android:attr/buttonStyleSmall"
